2010-01-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/skin/classic/sogo-connector/addressbook/addressbook.groupdav.overlay.css:
	added classes and icons from Mac and non-Mac platforms. (Closes: #51)

2010-01-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	fixed support for webdav-sync, which didn't take the intermediary
	"supported-report" element into account.
	Fixed a bug in the intepretation of the DAV resourcetype property.

2009-12-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js: ensure
	that the "type" parameter is available when reconstructing the
	array of types for the "TEL", "WORK", "URL" and "EMAIL" tags.

2009-08-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/calendar-common-sets.xul:
	added an "Export Task" menu item to the task context menu, that
	triggers the export of the selected tasks.

	* install.rdf: version number set to 0.97pre1

	* chrome/content/sogo-connector/calendar/utils.js: slightly
	modified to override modifyEventWithDialog rather than openDialog.
	Fixed to take the recurrence state of the selected item into
	account.

2009-08-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/utils.js: if an item
	changes during a calendar refresh, we must fetch the new item from
	the calendar and bind it to the editing/summary dialog. Otherwise
	the old version is still used.

2009-08-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	modified to handle "valid-sync-token" synchronization errors.

	* chrome/content/sogo-connector/calendar/calendar-summary-dialog.xul:
	new version of the overlay, only for including utils.js and
	thereby have access to our version of isCalendarWritable.

	* js/CalDAVAclManager.js: we remove the entries pertaining to